manifests/networking/adguard/06-dns-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns-tcp
  namespace: networking
  labels:
    app: adguard
spec:
  type: ClusterIP
  selector:
    app: adguard
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
